--- a/quickbudget.html
+++ b/quickbudget.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:100,300,400,600" rel="stylesheet" type="text/css">
-        <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" type="text/css">
+        <script src="https://kit.fontawesome.com/c7f0d626a8.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
         <link type="text/css" rel="stylesheet" href="quickbudgetstyle.css">
-        <title>Budgety</title>
+        <title>Easy Budget</title>
     </head>
     <body>
         <nav class="nav-custom navbar navbar-expand-lg navbar-dark">
@@ -72,7 +72,7 @@
                     </select>
                     <input type="text" class="add__description" placeholder="Add description">
                     <input type="number" class="add__value" placeholder="Value">
-                    <button class="add__btn"><i class="ion-ios-checkmark-outline"></i></button>
+                    <button class="add__btn"><i class="far fa-check-square"></i></button>
                 </div>
             </div>
             
